[package]
name = "shakshuka"
authors = ["Ray Tung <code@raytung.net>"]
description = "Simple command line tool for calculating content hash. Supports .ignore (.contenthashignore) file"
edition = "2018"
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/raytung/shakshuka"
repository = "https://github.com/raytung/shakshuka"
keywords = ["content-hash", "sha", "ignore", "hash"]
categories = ["command-line-utilities"]

[[bin]]
name = "shk"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
ignore = "0.4.17"
sha2 = "0.9.2"