[package]
name = "shakshuka"
authors = ["Ray Tung <code@raytung.net>"]
description = "Simple command line tool for calculating content hash. Supports .ignore (.contenthashignore) file"
edition = "2021"
version = "0.2.1"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/raytung/shakshuka"
repository = "https://github.com/raytung/shakshuka"
keywords = ["content-hash", "sha", "ignore", "hash"]
categories = ["command-line-utilities"]

[[bin]]
name = "shk"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.6", features = ["derive"] }
ignore = "0.4.18"
sha2 = "0.10.1"